# TradingPatternScanner

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/scripts/: release.py
.github/workflows/: python-ci.yml  python-publish.yml  release.yml
patterns/tests/: tests.py
src/: patterns.py  test.py
src/TradingPatternScanner/: tests.py
tests/: TestAll.py  ascending_triangle.csv  ascending_triangle_explained.csv  descending_triangle.csv  descending_triangle_explained.csv  double_bottom.csv  double_bottom_explained.csv  double_top.csv  test_gold_from_yfinance.py  test_hs.py  tests.py  triple_bottom.csv  triple_bottom_explained.csv  triple_top.csv  triple_top_explained.csv
tradingpatterns/: analysis.py  hard_data.py  tradingpatterns.py  tradingpatterns_tech.py
