[metadata]
name = tradingpatterns
description = Python package for detecting trading patterns like Head and Shoulders, Double top and bottom and many more with only using Pandas and Numpy.
long_description_content_type = text/markdown
url = https://github.com/white07S/TradingPatternScanner
project_urls =
    Bug Tracker = https://github.com/white07S/TradingPatternScanner/issues
    Changelog = https://github.com/white07S/TradingPatternScanner/releases
classifiers =
    Programming Language :: Python :: 3
    License :: LICENSE
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = patterns.src.patterns:entry_point
